fix spinner alignment

--- a/app/assets/stylesheets/chaltron/layout.css.scss
+++ b/app/assets/stylesheets/chaltron/layout.css.scss
@@ -45,7 +45,8 @@ div#content {
   display: block;
   position: fixed;
   z-index: 1031;
-  top: 15px;
+  top: 12px;
   right: 0px;
   left: 50%;
+  margin-left: -9px;
 }
